Fix social links align

--- a/theme/assets/css/gutenberg-wp-block-social-links.css
+++ b/theme/assets/css/gutenberg-wp-block-social-links.css
@@ -1,5 +1,5 @@
-.wp-block-social-links{
-  @apply mx-4;
+.wp-block-social-links.wp-block-social-links{
+  @apply mx-0;
 }
 
 .wp-block-social-links .wp-social-link{
